--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "graphql": "^16.8.1",
     "next": "15.3.2",
     "payload": "^3.44.0",
-    "react": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sharp": "0.32.6"
   },
   "devDependencies": {
@@ -37,8 +38,8 @@
     "@testing-library/react": "16.3.0",
     "@types/express": "^5.0.3",
     "@types/node": "^22.5.4",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.2",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
