--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "A blank template to get started with Payload 3.0",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
@@ -24,6 +23,7 @@
     "@payloadcms/richtext-lexical": "3.44.0",
     "@payloadcms/ui": "3.44.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "graphql": "^16.8.1",
@@ -31,7 +31,8 @@
     "payload": "^3.44.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "style-loader": "^4.0.0"
   },
   "devDependencies": {
     "@playwright/test": "1.50.0",
