--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jsdom": "26.1.0",
     "playwright": "1.50.0",
     "playwright-core": "1.50.0",
