--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@testing-library/react": "16.3.0",
     "@types/express": "^5.0.3",
     "@types/node": "^22.5.4",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "4.5.2",
     "eslint": "^9.16.0",
@@ -50,7 +50,7 @@
     "playwright-core": "1.50.0",
     "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
-    "typescript": "5.7.3",
+    "typescript": "^5.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.3"
   },
